# simple-task-manager

./: .coverage  Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
api_app/: serializers.py  tests.py  urls.py  views.py
task_app/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_app/migrations/: 0001_initial.py  0002_alter_tasktype_task_type_name.py  0003_alter_task_options.py  0004_alter_tasktype_task_type_name.py  0005_task_description.py  0006_alter_usertask_options_alter_task_deadline_date_and_more.py  0007_alter_tasktype_task_type_name.py  0008_alter_task_task_type_alter_tasktype_task_type_name.py  0009_alter_tasktype_task_type_name.py  0010_alter_tasktype_task_type_name.py  0011_alter_tasktype_task_type_name.py  0012_alter_tasktype_task_type_name.py  0013_alter_usertask_unique_together.py  0014_alter_usertask_options_userprofile.py  0015_rename_userprofile_profile.py  0016_alter_task_options_alter_task_deadline_date.py  0017_alter_task_deadline_date.py  0018_alter_task_deadline_date.py
task_app/temlates/task_app/: index.html  task_create.html  task_delete.html  task_detail.html  task_list.html  task_select.html  task_update.html
task_manager/: settings.py  urls.py
user_app/: signals.py  urls.py  views.py
user_app/templates/user_app/: user_login.html  user_register.html
